src/test/resources/frontendReference/invalid/semanticErr/class/inheritance/declareSubclass.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 21:2 -- Incompatible type at 'f'. Expected type: CLASS d. Actual type: CLASS f.